[package]
name = "piston_trial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston = "0.53.1"
piston2d-graphics = "0.42.0"
piston_window = "0.124.0"
pistoncore-glutin_window = "0.69.0"
piston2d-opengl_graphics = "0.81.0"
regex = "1"
lazy_static = "*"
#cpal = "0.13.5"
#hound = "3.4.0"
#minimp3 = "0.5.1"
clap = "3.2.16"
anyhow = "1.0.60"
kira = "0.6.1"
gfx = "0.18.1"
piston2d-gfx_graphics = "*"
gfx_device_gl = "0.16.2"
image = "0.24.1"